# Gobblet

./: .gitignore  Cargo.toml  GC.md  Pipfile  README.md  game.py  makefile
docs/: Condition.md  Data Modeling & OO.md  DataStructure.md  Derive.md  DownloadAndSetup.md  GC.md  Generics.md  OOD.drawio  Rocket.md  Rocket_config.md  [0922]Derive.md  [0923]Derive2.md  [0926]Functional Programming.md  [0930]How to learn fast.md  [1001]Ai in rust.md  [1006]unit_test.md  [1011]webassembly_implement.md  [1013]rust_job_market.md  [D1]DownloadAndSetup.md  agenda.md  array_data_structure.md  async.md  borrow_mutable_case.md  borrowing.md  error_handling.md  lamdba.md  lifetime.md  macro.md  multithreading.md  ownership.md  project_struct.md  react_fronted.md  rocket_api.md  webassembly.md  建模.md
export/: Cargo.toml
frontend/: package-lock.json
frontend/src/: Board.js  BoardPiece.js  BoardSquare.js  Game.js  Inventory.js  InventoryPiece.js  Plate.js  Square.js  Stack.js  StackSquare.js  TutorialApp.js
gobblet/: Cargo.toml
gobblet/src/: game.rs  gobblet.rs  main.rs  policies.rs
playground/: Cargo.toml
python/: game.py
src/: algorithm.rs  game.rs  main.rs
study-connect4/: Cargo.toml
synthesis/: Cargo.toml
synthesis/src/: alpha_zero.rs  mcts.rs
tests/: test_game.py
wasm_lab/: Cargo.toml  index.html
wasm_lab/src/: lib.rs
