[package]
name = "img_clf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#int-enum = "0.4"
#rstest = "0.15.0"
#rand = "0.8.5"
#boolenum = "0.1.0"
#colored = "2.0.0"
#ndarray = "0.15.6"
#anyhow = "1"
#imp = "0.1.0"
#tch = "0.8.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[lib]
crate-type = ["cdylib"]