[package]
name = "img_clf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
anyhow = "1"
tch = "0.10.3"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
[dependencies.zip]
version = "0.5.4"
default-features = false
features = ["deflate"]
[lib]
crate-type = ["cdylib"]